# longstock

./: Dockerfile  README.md  app.py  crewai_flow.html  financial_data.py  fundamental_analysis.md  fundamental_analysis.txt  main.py  outputlogs.txt  pyproject.toml  report.md  requirements.txt
crews/fundamental_crew/: fundamental_crew.py
crews/fundamental_crew/config/: agents.yaml  tasks.yaml
crews/sentiment_crew/config/: agents.yaml  tasks.yaml
crews/technical_crew/: technical_crew.py
longstock/: README.md  pyproject.toml
longstock_flowu/: requirements.txt
output/: alok industries_technical_analysis.txt  barbeque nation_fundamental_analysis.txt  barbeque nation_technical_analysis.txt  ola electric_fundamental_analysis.md  ola electric_technical_analysis.md  test_company_fundamental_analysis.md  test_company_technical_analysis.md
outputs/: chart_analysis.md  trade_signal.md
outputs/Alok industries/: analyze_financial_statements_task.md  assess_growth_potential_task.md  calculate_valuation_metrics_task.md  evaluate_competitive_position_task.md  fundamental_analysis.md  review_capital_allocation_task.md  technical_analysis.md
outputs/ola electric/: analyze_financial_statements_task.md  assess_growth_potential_task.md  calculate_valuation_metrics_task.md  evaluate_competitive_position_task.md  fundamental_analysis.md  generate_technical_analysis_report_task.md  review_capital_allocation_task.md
outputs/test_company/: analyze_financial_statements_task.md  chart_pattern_analysis_task.md  evaluate_competitive_position_task.md
tools/: yfinance_tool.py
(+1 files in other folders)
