[project]
name = "longstock_flow"
version = "0.1.0"
description = "longstock_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
]

[project.scripts]
kickoff = "longstock_flow.main:kickoff"
run_crew = "longstock_flow.main:kickoff"
plot = "longstock_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
